src/test/ui/parser/pat-ranges-2.stderr
error: expected one of `::`, `:`, `;`, or `=`, found `!`
  --> $DIR/pat-ranges-2.rs:6:26
   |
LL |     let 10 ..= makropulos!() = 12; //~ error: expected one of `::`, `:`, `;`, or `=`, found `!`
   |                          ^ expected one of `::`, `:`, `;`, or `=` here

error: aborting due to previous error

